<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    tools:context="viniciusgettingbetter.pocketgenius.MainActivity">

    <ImageView
        android:id="@+id/img_telaInicial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20sp"
        android:layout_weight="2"
        android:contentDescription="@string/desc_img_telaInicial"
        app:srcCompat="@mipmap/fusao" />

    <LinearLayout
        android:id="@+id/linear_btn_telaInicial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FF00"
            android:text="@string/lbl_cadastrar"
            android:textSize="14sp"
            android:onClick="goCadastrar"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="#0F0FF0"
            android:text="@string/lbl_login"
            android:textSize="14sp"
            android:onClick="goLogin"/>
    </LinearLayout>

</LinearLayout>
