<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginTop="20sp"
    android:orientation="vertical"
    tools:context="viniciusgettingbetter.pocketgenius.CadastrarActivity">

    <TextView
        android:id="@+id/txtview_cad_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nome"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edtxt_cad_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Fulano Ciclano"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtview_cad_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edtxt_cad_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="fulano_ciclano@gmail.com"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtview_cad_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_senha"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edtxt_cad_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="******"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtview_cad_cnfsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_senha"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edtxt_cad_cnfsenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="******"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/img_cadastro_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/desc_img_novoCadastro"
        app:srcCompat="@drawable/welcome" />

</LinearLayout>
